fixed the timer functionality to adding 5 minutes, added text align to make sure the tasks list looks nice, fixed the ring to reset when the reset is clicked and to start over on the next session

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -351,6 +351,7 @@ main {
 	color: var(--text_color);
 	cursor: pointer;
 	margin-left: 1px;
+	text-align: left;
 }
 
 .checkbox-label::before{
